# thesis

./: .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  compose.dev.yml  compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  test.yml
nginx/: nginx.conf
thesis/: Dockerfile  gunicorn.conf.py  manage.py  requirements.txt
thesis/classification/: models.py  service.py  tests.py  urls.py  views.py
thesis/classification/migrations/: 0001_initial.py  0002_dataset.py
thesis/dashboard/: forms.py  urls.py  views.py
thesis/dashboard/templates/dashboard/: _data.html  _sidebar.html  data.html  home.html  report.html  testing.html  training.html
thesis/dashboard/templates/dashboard/data/: all.html  testing.html  training.html
thesis/static/css/: output.css
thesis/templates/: _base.html  _navbar.html  _sidebar.html  about.html  index.html  predict.html
thesis/templates/registration/: login.html
thesis/thesis/: asgi.py  settings.py  urls.py  wsgi.py
