[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.1.4",
    "psycopg2-binary>=2.9.10",
    "psycopg2>=2.9.10",
    "gunicorn>=23.0.0",
    "django-environ>=0.11.2",
    "pandas>=2.2.3",
    "djlint>=1.36.4",
    "joblib>=1.4.2",
    "plotly>=5.24.1",
    "linggapy>=0.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
]
